--- a/app/static-fetch-demo.html
+++ b/app/static-fetch-demo.html
@@ -72,6 +72,7 @@
     <!-- endbuild -->
     <!-- build:js scripts/main.js -->
     <script src="scripts/main.js"></script>
+	  <script src="scripts/fetch-10-random-movies.js"></script>
     <!-- endbuild -->
   </body>
 </html>
